<resources>
    <string name="app_name">Just Java</string>

    <string name="input_hint">Name</string>

    <string name="toppings">Toppings</string>

    <string name="whipped_cream_checkbox">Whipped Cream</string>

    <string name="Chocolate_checkbox">Chocolate</string>

    <string name="quantity">Quantity</string>

    <string name="summary">Order Summary</string>

    <string name="order">Order</string>
</resources>
